<resources>
    <string name="app_name">DoggieGang</string>
    <string name="loading">Loading…</string>
    <string name="page_title">DoggieGang</string>
    <string name="options">Options</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="dark_mode">Enable Dark Mode</string>
    <string name="light_mode">Enable light mode</string>
    <string name="set_mode">Set mode</string>
    <string name="dogName">Dog\'s name</string>
    <string name="ownerName">Owner\'s name</string>
    <string name="introduction">Introduction</string>
    <string name="location">Location</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <string name="success">Success</string>
    <string name="go_to_registration">Go to registration</string>
</resources>